# json-object

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: release.yml  test.yml
docs/: conf.py
docs/_templates/: badges.html  github.html  moreinfo.html
eljson/: exceptions.py  json_doc.py  strict_json.py
json_object/: example.py
tests/: test_json_doc.py  test_strict_json.py
tests/fixtures/: invalid_shm.json  valid_shm.json
tests/it/: test_lib.py
tests/test_example/: test_some_function.py
tests/unit/: test_json_doc.py  test_strict_json.py
