[tool.poetry]
name = "eljson"
description = "This is how python package should look like!"
version = "0.1.0"
license = "MIT"

authors = ['Almaz Ilaletdinov <a.ilaletdinov@yandex.ru>']

readme = "README.md"

repository = "https://github.com/blablatdinov/eljson"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
attrs = "^20.1"
jsonschema = "^4.17"
jsonpath-ng = "^1.5"

[tool.poetry.group.test.dependencies]
mypy = "^1.4"
wemake-python-styleguide = "0.18.0"
flake8-pytest-style = "^1.6"
pytest = "^7.4"
pytest-cov = "^4.1"
pytest-randomly = "^3.12"
flake8-copyright = "0.2.4"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"
